--- a/packages/SystemUI/res/layout/status_bar_mobile_signal_group.xml
+++ b/packages/SystemUI/res/layout/status_bar_mobile_signal_group.xml
@@ -35,9 +35,7 @@
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:visibility="gone"
-            android:layout_gravity="center_vertical"
-            android:paddingEnd="2dp"
-            android:paddingStart="3dp" />
+            android:paddingEnd="2dp"/>
         <FrameLayout
             android:id="@+id/inout_container"
             android:layout_height="17dp"
