--- a/packages/SystemUI/res/values-ru/ssos_strings.xml
+++ b/packages/SystemUI/res/values-ru/ssos_strings.xml
@@ -185,4 +185,11 @@
     <string name="keyguard_indication_vooc_charging_time" formatted="false"><xliff:g id="percentage">%2$s</xliff:g> • VOOC Зарядка (<xliff:g id="charging_time_left" example="4 hours and 2 minutes">%1$s</xliff:g> до полного)</string>
     <string name="keyguard_plugged_in_vooc_charging">VOOC Зарядка</string>
     
+    <!-- Indication on the keyguard that is shown when the device is smart charging. Should match keyguard_plugged_in_smart_charging [CHAR LIMIT=40]-->
+    <string name="keyguard_indication_smart_charging_time" formatted="false"><xliff:g id="percentage">%2$s</xliff:g> • Smart Charging (<xliff:g id="charging_time_left" example="4 hours and 2 minutes">%1$s</xliff:g> until full)</string>
+    <string name="keyguard_plugged_in_smart_charging">Умная зарядка</string>
+
+    <!-- Screenshot Delete Toast -->
+    <string name="delete_screenshot_toast">Скриншот удален</string>
+
 </resources>
