--- a/core/res/res/values/ssos_arrays.xml
+++ b/core/res/res/values/ssos_arrays.xml
@@ -42,6 +42,15 @@
         <item>@string/accessibility_quick_settings_live_display_outdoor</item>
     </string-array>
 
+    <!-- LiveDisplay announcement-->
+    <string-array name="live_display_announcement" translatable="false">
+        <item>@string/accessibility_quick_settings_live_display_changed_auto</item>
+        <item>@string/accessibility_quick_settings_live_display_changed_off</item>
+        <item>@string/accessibility_quick_settings_live_display_changed_day</item>
+        <item>@string/accessibility_quick_settings_live_display_changed_night</item>
+        <item>@string/accessibility_quick_settings_live_display_changed_outdoor</item>
+    </string-array>
+
     <integer-array name="colorslist">
        <item>#2196F3</item>
        <item>#72B70F</item>
