--- a/core/res/res/values/ssos_arrays.xml
+++ b/core/res/res/values/ssos_arrays.xml
@@ -42,12 +42,29 @@
         <item>@string/accessibility_quick_settings_live_display_outdoor</item>
     </string-array>
 
-    <!-- LiveDisplay announcement-->
-    <string-array name="live_display_announcement" translatable="false">
-        <item>@string/accessibility_quick_settings_live_display_changed_auto</item>
-        <item>@string/accessibility_quick_settings_live_display_changed_off</item>
-        <item>@string/accessibility_quick_settings_live_display_changed_day</item>
-        <item>@string/accessibility_quick_settings_live_display_changed_night</item>
-        <item>@string/accessibility_quick_settings_live_display_changed_outdoor</item>
-    </string-array>
+    <integer-array name="colorslist">
+       <item>#2196F3</item>
+       <item>#72B70F</item>
+       <item>#FF7E0F</item>
+       <item>#258982</item>
+       <item>#FFA727</item>
+       <item>#01B1AF</item>
+       <item>#C14CE6</item>
+       <item>#0F9D58</item>
+       <item>#F15B8D</item>
+       <item>#5011C1</item>
+       <item>#9E9E9E</item>
+       <item>#26459C</item>
+       <item>#1A73E8</item>
+       <item>#2EC7DC</item>
+       <item>#6F86DA</item>
+       <item>#5E97F6</item>
+       <item>#72BBFF</item>
+       <item>#4285F4</item>
+       <item>#34A853</item>
+       <item>#FBBC04</item>
+       <item>#B71C1C</item>       
+       <item>#d20082</item>       
+    </integer-array>
+
 </resources>
